<?xml version="1.0" encoding="utf-8"?><!--
  ~    ™T©ReMeTaL Pos.
  ~    Copyright (C) 2021™T©ReMeTaL.
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~
  ~    Some functionality created with modified (code) lessons provided by:
  ~    The Android Open Source Project.
  ~    Copyright (C) 2021 The Android Open Source Project.
  ~    Licensed under the Apache License, Version 2.0 (the "License").
  ~
  ~    You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  ~   ************************************************************************
  ~     activity_main_drawer.xml : Copyright (c) 2021™T©ReMeTaL.
  ~   ************************************************************************
  ~      Computer Scientist: David W. Rick
  ~      Date: 12/14/21, 10:32 AM
  ~      Program Name: Pos
  ~      File: activity_main_drawer.xml
  ~      Last Modified: 11/29/21, 5:00 AM
  ~   ************************************************************************
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_end_sale_gold"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_add_shopping_cart"
            android:title="@string/inventory" />
        <item
            android:id="@+id/nav_pdf"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/sales" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_inv"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_open"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/select_file" />
        <item
            android:id="@+id/nav_viewFile"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/view_file"
            android:visible="false" />
    </group>
</menu>