<?xml version="1.0" encoding="utf-8"?><!--
  ~    ™T©ReMeTaL Pos.
  ~    Copyright (C) 2021™T©ReMeTaL.
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~
  ~    Some functionality created with modified (code) lessons provided by:
  ~    The Android Open Source Project.
  ~    Copyright (C) 2021 The Android Open Source Project.
  ~    Licensed under the Apache License, Version 2.0 (the "License").
  ~
  ~    You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  ~   ************************************************************************
  ~     fragment_item_detail.xml : Copyright (c) 2021™T©ReMeTaL.
  ~   ************************************************************************
  ~      Computer Scientist: David W. Rick
  ~      Date: 12/14/21, 10:32 AM
  ~      Program Name: Pos
  ~      File: fragment_item_detail.xml
  ~      Last Modified: 11/25/21, 9:02 PM
  ~   ************************************************************************
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".ui.inventory.ItemDetailFragment"
    tools:keep="@layout/fragment_item_detail">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemIdL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/item_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/itemId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="none"
            android:singleLine="true"
            android:textColor="@color/black"
            tools:text="0000000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_nameL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/item_Name"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemIdL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="none"
            android:singleLine="true"
            android:textColor="@color/black"
            tools:text="Screwdrivers" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_priceL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_SalePrice"
        app:layout_constraintEnd_toEndOf="@+id/item_nameL"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/item_nameL"
        app:layout_constraintTop_toBottomOf="@+id/item_nameL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="none"
            android:singleLine="true"
            android:textColor="@color/black"
            tools:text="$5.50" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/btn_default"
        android:hint="@string/qty"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toStartOf="@+id/sell_item"
        app:layout_constraintTop_toBottomOf="@+id/itemIdL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purchaseQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:inputType="numberSigned|number"
            android:minWidth="100dp"
            android:selectAllOnFocus="true"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:singleLine="true"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="#FF2B2B"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/item_count_label"
        style="@style/Widget.Pos.TextView"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_priceL" />

    <TextView
        android:id="@+id/item_count"
        style="@style/Widget.Pos.TextView"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/item_count_label"
        app:layout_constraintTop_toTopOf="@+id/item_count_label"
        tools:text="5" />

    <Button
        android:id="@+id/sell_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:drawableTop="@drawable/ic_end_sale_gold"
        android:text="@string/sell"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_item" />

    <Button
        android:id="@+id/delete_item"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableTop="@android:drawable/ic_menu_revert"
        android:text="@string/inventory"
        app:layout_constraintEnd_toStartOf="@+id/checkout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_count" />


    <Button
        android:id="@+id/checkout"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_cart"
        android:text="@string/menu_home"
        app:layout_constraintBaseline_toBaselineOf="@+id/delete_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delete_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/edit_item"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_stock"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@+id/sell_item"
        app:layout_constraintEnd_toEndOf="@+id/sell_item"
        app:layout_constraintStart_toStartOf="@+id/sell_item"
        app:layout_constraintTop_toTopOf="@+id/sell_item" />

</androidx.constraintlayout.widget.ConstraintLayout>


