<?xml version="1.0" encoding="utf-8"?><!--
  ~    ™T©ReMeTaL Pos.
  ~    Copyright (C) 2021™T©ReMeTaL.
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~
  ~    Some functionality created with modified (code) lessons provided by:
  ~    The Android Open Source Project.
  ~    Copyright (C) 2021 The Android Open Source Project.
  ~    Licensed under the Apache License, Version 2.0 (the "License").
  ~
  ~    You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  ~   ************************************************************************
  ~     item_list_fragment.xml : Copyright (c) 2021™T©ReMeTaL.
  ~   ************************************************************************
  ~      Computer Scientist: David W. Rick
  ~      Date: 12/14/21, 10:32 AM
  ~      Program Name: Pos
  ~      File: item_list_fragment.xml
  ~      Last Modified: 11/25/21, 9:02 PM
  ~   ************************************************************************
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.inventory.ItemListFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/man_searchLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButtonExport"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/man_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/item_search"
            android:inputType="number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/item_name"
        style="@style/Widget.Pos.Header"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:text="@string/item"
        app:layout_constraintEnd_toStartOf="@+id/item_price"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/man_searchLayout" />

    <TextView
        android:id="@+id/item_price"
        style="@style/Widget.Pos.Header"
        android:layout_below="@+id/item_name"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:text="@string/price"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_name"
        app:layout_constraintEnd_toStartOf="@+id/item_quantity"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/item_name" />

    <TextView
        android:id="@+id/item_quantity"
        style="@style/Widget.Pos.Header"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:text="@string/quantity_in_stock"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/item_price" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_marginTop="@dimen/margin_between_elements"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_quantity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_new_item"
        android:src="@drawable/ic_add_item"
        app:backgroundTint="#C57411"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="36dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/exportSalesCsv"
        android:cropToPadding="true"
        android:src="@drawable/ic_baseline_get_app_48"
        app:backgroundTint="#00FFFFFF"
        app:fabSize="auto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="48dp"
        app:tint="@color/black" />
</androidx.constraintlayout.widget.ConstraintLayout>